--- a/app/views/sites/_form.html.erb
+++ b/app/views/sites/_form.html.erb
@@ -23,6 +23,27 @@
     <%= f.label :url %><br />
     <%= f.text_field :url %>
   </div>
+
+  <div class="field">
+    <%= f.label :post_title_xpath %><br />
+    <%= f.text_field :post_title_xpath %>
+  </div>
+
+  <div class="field">
+    <%= f.label :post_body_xpath %><br />
+    <%= f.text_field :post_body_xpath %>
+  </div>
+
+  <div class="field">
+    <%= f.label :post_author_xpath %><br />
+    <%= f.text_field :post_author_xpath %>
+  </div>
+
+  <div class="field">
+    <%= f.label :post_xpath %><br />
+    <%= f.text_field :post_xpath %>
+  </div>
+
   <div class="actions">
     <%= f.submit %>
   </div>
