--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -25,6 +25,11 @@
 	<%= @post.body %>
 </p>	
 
+<p>
+	<b>Reply Count:</b>
+	<%= @post.reply_count %>
+</p>	
+
 
 <%= link_to 'Edit', edit_post_path(@post) %> |
 <%= link_to 'Back', posts_path %>
