--- a/app/views/sites/_form.html.erb
+++ b/app/views/sites/_form.html.erb
@@ -44,6 +44,11 @@
     <%= f.text_field :post_xpath %>
   </div>
 
+  <div class="field">
+    <%= f.label :post_reply_number_xpath %><br />
+    <%= f.text_field :post_reply_number_xpath %>
+  </div>
+
   <div class="actions">
     <%= f.submit %>
   </div>
