--- a/app/views/sites/show.html.erb
+++ b/app/views/sites/show.html.erb
@@ -36,5 +36,10 @@
 </p>
 
 
+<p>
+  <b>Reply count XPath:</b>
+  <%= @site.post_reply_number_xpath %>
+</p>
+
 <%= link_to 'Edit', edit_site_path(@site) %> |
 <%= link_to 'Back', sites_path %>
