--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -30,6 +30,15 @@
 	<%= @post.reply_count %>
 </p>	
 
+<p>
+	<b>First seen at</b>
+	<%= @post.created_at %>
+</p>
+
+<p>
+	<b>Last seen at </b>
+	<%= @post.updated_at %>
+</p>
 
 <%= link_to 'Edit', edit_post_path(@post) %> |
 <%= link_to 'Back', posts_path %>
